force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Lead_Chief_Investigator_Staff_Id__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Lead_Chief_Investigator_Staff_Id__c</fullName>
    <description>Lead chief investigator staff Id</description>
    <formula>I_RS_LeadChiefInvestigator__r.Contact.I_RS_Staff_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Lead chief investigator staff Id</inlineHelpText>
    <label>Lead Chief Investigator Staff Id</label>
    <type>Text</type>
</CustomField>