force-app/main/default/objects/Project_Proposal__c/fields/I_RS_LeadChiefInvestigator__c.field-meta.xml
<CustomField>
    <fullName>I_RS_LeadChiefInvestigator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Chief Investigator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LeadChiefInvestigator</relationshipName>
    <type>Lookup</type>
</CustomField>