force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Make_a_Chatter_Post__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Make_a_Chatter_Post__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is referenced by an approval process. If this checkbox is true, a process builder will be triggered to create a Chatter post that mention&apos;s the Research Office Contact person</description>
    <label>Make a Chatter Post</label>
    <type>Checkbox</type>
</CustomField>