force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Note__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Note__c</fullName>
    <description>Hello! The purpose of this field is to display a note/message to users when accessing a quick action in the Community.</description>
    <label>Note</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>