force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Number_of_Complete_Milestones__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Number_of_Complete_Milestones__c</fullName>
    <label>Number of Complete Milestones</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>