force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Number_of_Lead_Chief_Investigator__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Number_of_Lead_Chief_Investigator__c</fullName>
    <label>Number of Lead Chief Investigator</label>
    <summaryFilterItems>
        <field>Project_Team_Member__c.I_RS_Role__c</field>
        <operation>equals</operation>
        <value>Lead Chief Investigator</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Project_Team_Member__c.I_RS_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Project_Team_Member__c.I_RS_Project_Proposal__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>