force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Number_of_Overdue_Milestone_Tasks__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Number_of_Overdue_Milestone_Tasks__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Counts Number of Tasks with &apos;Milestone&apos; checked, are not Completed and have a Due Date that has past</description>
    <label>Number of Overdue Milestone Tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>