force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Peer_Feedback_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Peer_Feedback_Date__c</fullName>
    <label>Peer Feedback Date</label>
    <type>Date</type>
</CustomField>