force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Peer_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Peer_Review_Status__c</fullName>
    <label>Peer Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exempt</fullName>
            </value>
            <value>
                <fullName>Material provided</fullName>
            </value>
            <value>
                <fullName>With reviewer</fullName>
            </value>
            <value>
                <fullName>Feedback provided to applicant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>