force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Pitch_Session_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Pitch_Session_Date__c</fullName>
    <description>The date the pitch session is scheduled for or when it was held.</description>
    <label>Pitch Session Date</label>
    <type>Date</type>
</CustomField>