force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Pitch_Status__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Pitch_Status__c</fullName>
    <label>Pitch Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exempt</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Completed – Progress</fullName>
            </value>
            <value>
                <fullName>Completed – Recommend not progress</fullName>
            </value>
            <value>
                <fullName>Not Completed - Late entrant</fullName>
            </value>
            <value>
                <fullName>Not Completed-Late entrant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>