force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Portal_Record_URL__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Portal_Record_URL__c</fullName>
    <description>URL for record in researcher portal. Used in email templates sent to researchers, and in any places where the correct URL is not based on the logged in user.</description>
    <formula>/*Base URL*/
$Setup.URL_Variable__c.I_RS_Researcher_Portal_Base_URL__c + &apos;/detail/&apos;
+
/*Record Id*/
Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portal Record URL</label>
    <type>Text</type>
</CustomField>