force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Previous_Project_Code__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Previous_Project_Code__c</fullName>
    <description>The project code from the Research Master/RAS systems</description>
    <label>Previous Project Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>