force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Primary_TOA_Percentage__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Primary_TOA_Percentage__c</fullName>
    <label>Primary TOA Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>