force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Project_Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Project_Closure_Date__c</fullName>
    <description>An estimate of when the funder has accepted all the deliverables (this can be 2 years after the final deliverable)</description>
    <label>Project Closure Date</label>
    <type>Date</type>
</CustomField>