force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Project_Code__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Project_Code__c</fullName>
    <externalId>true</externalId>
    <label>Project Code</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>