force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Project_Duration_In_Years__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Project_Duration_In_Years__c</fullName>
    <description>Formula to calculate project duration in years</description>
    <formula>IF( ISBLANK( I_RS_Project_End_Date__c) , 7, ((YEAR( I_RS_Project_End_Date__c ) -  YEAR( I_RS_Project_Start_Date__c )) + 1))</formula>
    <label>Project Duration In Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>