force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Project_Proposal_Number__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Project_Proposal_Number__c</fullName>
    <displayFormat>PP{MM}{YY}{000}</displayFormat>
    <label>Project Proposal Number</label>
    <type>AutoNumber</type>
</CustomField>