force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Project_Title__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Project_Title__c</fullName>
    <label>Project Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>