force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Project_Type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Project_Type__c</fullName>
    <label>Proposal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grant</fullName>
            </value>
            <value>
                <fullName>Quote/Proposal</fullName>
            </value>
            <value>
                <fullName>Tender/RFQ</fullName>
            </value>
            <value>
                <fullName>Expression of interest</fullName>
                <isActive>false</isActive>
                <label>Expression of interest</label>
            </value>
            <value>
                <fullName>Non-Research Consultancy</fullName>
                <isActive>false</isActive>
                <label>Non-Research Consultancy</label>
            </value>
            <value>
                <fullName>Request for proposal</fullName>
                <isActive>false</isActive>
                <label>Request for proposal</label>
            </value>
            <value>
                <fullName>Request for quote</fullName>
                <isActive>false</isActive>
                <label>Request for quote</label>
            </value>
            <value>
                <fullName>Research Collaboration</fullName>
                <isActive>false</isActive>
                <label>Research Collaboration</label>
            </value>
            <value>
                <fullName>Research Consultancy</fullName>
                <isActive>false</isActive>
                <label>Research Consultancy</label>
            </value>
            <value>
                <fullName>Scholarship</fullName>
                <isActive>false</isActive>
                <label>Scholarship</label>
            </value>
            <value>
                <fullName>Tender</fullName>
                <isActive>false</isActive>
                <label>Tender</label>
            </value>
            <value>
                <fullName>Tender/Expression of Interest</fullName>
                <isActive>false</isActive>
                <label>Tender/Expression of Interest</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>