force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Proposal_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Proposal_Submission_Date__c</fullName>
    <inlineHelpText>The date the proposal was submitted to the Funder (if already submitted).</inlineHelpText>
    <label>Date Proposal Submitted</label>
    <type>Date</type>
</CustomField>