force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Proposal_to_be_Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Proposal_to_be_Submitted_By__c</fullName>
    <label>Project Proposal to be Submitted By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Researcher</fullName>
            </value>
            <value>
                <fullName>Research Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>