force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Publishing_Rights__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Publishing_Rights__c</fullName>
    <description>If removing dependency on IP Position, please verify this field is still visible in the &apos;Create Budget&apos; flow</description>
    <inlineHelpText>Nominate your preferred position for publishing project results. This may or may not involve approval from the other party.  This may be updated once the Agreement has been finalised.</inlineHelpText>
    <label>Publishing Rights for Budgeting Purposes</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>I_RS_IP_Position__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Without Approval</fullName>
                <label>Publish Without Approval</label>
            </value>
            <value>
                <fullName>With Approval</fullName>
                <label>Publish With Approval</label>
            </value>
            <value>
                <fullName>No Rights</fullName>
                <label>No Rights To Publish</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>