force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Recommendation_Reason__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Recommendation_Reason__c</fullName>
    <description>Text explaining why the opportunity may be of interest</description>
    <label>Recommendation Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>