force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Recommendation_Status__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Recommendation_Status__c</fullName>
    <formula>IF(RecordType.DeveloperName = &quot;I_RS_Recommendation&quot;  &amp;&amp; ISPICKVAL(I_RS_Status__c, &quot;Dismissed&quot;), &quot;Dismissed&quot;,



IF(RecordType.DeveloperName = &quot;I_RS_Recommendation&quot;  &amp;&amp; ISPICKVAL(I_RS_Status__c, &quot;Recommended&quot;), &quot;Accepted&quot;,


&quot;Recommended&quot;

))</formula>
    <label>Recommendation Status</label>
    <type>Text</type>
</CustomField>