force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Recommended_By__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Recommended_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name of person who suggested this funding opportunity.</inlineHelpText>
    <label>Recommended By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>