force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Record_URL__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Record_URL__c</fullName>
    <description>Hyperlink to record. Used in workflows when making Chatter posts</description>
    <formula>/*Base URL*/
LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))
+
/*Record Id*/
Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record URL</label>
    <type>Text</type>
</CustomField>