force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Related_Project_Proposal__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Related_Project_Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related project proposal to create hierarchy or related records.</description>
    <label>Related Project Proposal</label>
    <referenceTo>Project_Proposal__c</referenceTo>
    <relationshipLabel>Related Project Proposals</relationshipLabel>
    <relationshipName>Related_Project_Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>