force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Research_at_hospital_health_service__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Research_at_hospital_health_service__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does this proposal / project involve research taking place at a Hospital or a Health Service provider?</inlineHelpText>
    <label>Research at hospital/health service</label>
    <type>Checkbox</type>
</CustomField>