force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Residency_Status_Comments__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Residency_Status_Comments__c</fullName>
    <description>Comments about residency status applicable to this application.</description>
    <label>Residency Status Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>