force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Scholarship_Component__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Scholarship_Component__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the proposal include a scholarship component to be funded?</inlineHelpText>
    <label>Scholarship Component</label>
    <type>Checkbox</type>
</CustomField>