force-app/main/default/objects/Project_Proposal__c/fields/I_RS_School__c.field-meta.xml
<CustomField>
    <fullName>I_RS_School__c</fullName>
    <formula>/*Unit level*/
IF( 
NOT(ISBLANK(I_RS_LeadChiefInvestigator__c)) &amp;&amp; 
I_RS_LeadChiefInvestigator__r.Contact.Account.Parent.Parent.Parent.Parent.Name = &quot;La Trobe University&quot;, 
I_RS_LeadChiefInvestigator__r.Contact.Account.Parent.Parent.Name, 


/*Dept level */
IF( 
NOT(ISBLANK(I_RS_LeadChiefInvestigator__c)) &amp;&amp; 
I_RS_LeadChiefInvestigator__r.Contact.Account.Parent.Parent.Parent.Name = &quot;La Trobe University&quot;,
I_RS_LeadChiefInvestigator__r.Contact.Account.Parent.Name,



/* School level */
IF( 
NOT(ISBLANK(I_RS_LeadChiefInvestigator__c)) &amp;&amp; 
I_RS_LeadChiefInvestigator__r.Contact.Account.Parent.Parent.Name = &quot;La Trobe University&quot;,
I_RS_LeadChiefInvestigator__r.Contact.Account.Name,






&quot;&quot; 
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>School</label>
    <type>Text</type>
</CustomField>