force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Second_Approver__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Second_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Proposals_Second_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>