force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Source_of_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Source_of_Opportunity__c</fullName>
    <label>Source of Opportunity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approach by Industry</fullName>
            </value>
            <value>
                <fullName>Industry Engagement</fullName>
            </value>
            <value>
                <fullName>Panel</fullName>
            </value>
            <value>
                <fullName>Publicly available</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Grant connect</fullName>
            </value>
            <value>
                <fullName>Research Professional</fullName>
            </value>
            <value>
                <fullName>Alumni and Advancement Office</fullName>
            </value>
            <value>
                <fullName>Graduate Research School</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>