force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Status_New__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Status_New__c</fullName>
    <label>Status 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Project_Proposal_Status</valueSetName>
    </valueSet>
</CustomField>