force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Student_Led__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Student_Led__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the proposal led by a Student?</inlineHelpText>
    <label>Student Led</label>
    <type>Checkbox</type>
</CustomField>