force-app/main/default/objects/Project_Proposal__c/fields/I_RS_System_Field_Approval_Toggle__c.field-meta.xml
<CustomField>
    <fullName>I_RS_System_Field_Approval_Toggle__c</fullName>
    <description>This is a system(Code related) field to be used in approval process to execute trigger and there by handle lock unlock</description>
    <label>System Field Approval Toggle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One</fullName>
            </value>
            <value>
                <fullName>Two</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>