force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Tasks_with_Milestone_Status_Green__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Tasks_with_Milestone_Status_Green__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of Tasks under Project Proposal whose Milestone Traffic Light Status is Green</description>
    <label>Tasks with Milestone Status Green</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>