force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Tasks_with_Milestone_Status_Yellow__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Tasks_with_Milestone_Status_Yellow__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Tasks with Milestone Status Yellow</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>