force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Terms_of_Employment_Comments__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Terms_of_Employment_Comments__c</fullName>
    <description>Comments about terms of employment applicable to this application</description>
    <label>Terms of Employment Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>